@@ -3,6 +3,7 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ==================================================================
+    * Bug fix: Fixed broken no-parameter config blocks.
     * Added core command SHUTDOWN.
     * Added core command MODRELOAD.
     * Added core command MODUNLOAD.
